# LEIC-DA-project2

./: .gitignore  Doxyfile  Doxyfile.bak  interface
code/: CMakeLists.txt  plot.py  plot_correctness.py  plot_time.py  plot_time_wrap.py  test.sh
code/project2/: interface.cpp  interface.h  io.cpp  io.h  knapsack.cpp  knapsack.h  main.cpp
code/results/: brute-force.txt  dp-iterative.txt  dp-recursive-map.txt  dp-recursive-vector.txt  dp_iterative.txt  dp_recursive_map.txt  dp_recursive_vector.txt  greedy.txt  integer-linear.txt
documentation/html/: dir_050edd66366d13764f98250ef6db77f6.html  dir_f0e171d6b8c624520174c753fba17fd9.html  dir_f0e171d6b8c624520174c753fba17fd9_dep.map  dir_f0e171d6b8c624520174c753fba17fd9_dep.md5  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  interface_8cpp.html  interface_8cpp__incl.map  interface_8cpp__incl.md5  interface_8h.html  interface_8h__dep__incl.map  interface_8h__dep__incl.md5  interface_8h__incl.map  interface_8h__incl.md5  interface_8h_source.html  io_8cpp.html  io_8cpp__incl.map  io_8cpp__incl.md5  io_8h.html  io_8h__dep__incl.map  io_8h__dep__incl.md5  io_8h__incl.map  io_8h__incl.md5  io_8h_source.html  knapsack_8cpp.html  knapsack_8cpp__incl.map  knapsack_8cpp__incl.md5  knapsack_8h.html  knapsack_8h__dep__incl.map  knapsack_8h__dep__incl.md5  knapsack_8h__incl.map  knapsack_8h__incl.md5  knapsack_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  (+1 more)
documentation/latex/: dir_050edd66366d13764f98250ef6db77f6.tex  dir_f0e171d6b8c624520174c753fba17fd9.tex  (+23 more)
(+22 files in other folders)
